# EltexPoker

./: .gitignore  LICENSE  Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  data.txt  data.txt~  pre.sh
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
src/: Makefile  Makefile.am  Makefile.in  global.h  global.h~
src/client/: Makefile  Makefile.am  Makefile.in  client.c  example_main.c  graf_api.h  logic.c  logic.h  logic_game.c  logic_menu.c  main.c  net_connect.c  net_create_connect_server.c  net_create_socket.c  net_disconnect.c  net_fill_socket_addr.c  net_handler_recv.c  net_handler_send.c  net_header.h  net_implementation.c  net_implementation.h  net_net.c  net_receive.c  net_send.c  network.c  network.h  pokerClient
src/client/.deps/: logic.Po  logic_game.Po  logic_menu.Po  main.Po  net_connect.Po  net_create_connect_server.Po  net_create_socket.Po  net_disconnect.Po  net_fill_socket_addr.Po  net_net.Po  net_receive.Po  net_send.Po
src/client/graf/: graf.c  graf.h  graf_api.h  graf_list.c  graf_list.h  test.c
src/graf/: Makefile.am  TEST  TL  graf.c  graf.h  graf_api.h  graf_list.c  graf_list.h  graf_static_game.c  graf_static_game.h  test.c  test_list.c  testmake
src/graf/.deps/: graf.Po  graf_list.Po
src/grafGtk/: Makefile.am  Makefile.in  compil_gtk  global.h  graf_api.h  graf_list.h  gtk_header.h  gtk_poker_func  gtk_poker_func.c  gtk_poker_game  gtk_poker_main.c
src/server/: .main.c.swp  Makefile  Makefile.am  Makefile.in  check.c  check.h  data.txt  events.c  events.h  internalIPC.h  logic  logic.c  logic.h  main.c  pokerServer  remove_player.c  remove_tables.c  server_network.c  server_network.h  server_network.h~
src/server/.deps/: events.Po  logic.Po  main.Po  server_network.Po
src/server/gameServer/: gameLogic.c  gameLogic.h  shared.c  shared.h  start.c  start.h  win.c  win.h
src/server/gameServer/.deps/: gameLogic.Po  shared.Po  start.Po  win.Po
src/server/gameServer/tests/: test.c
src/statistic/: Makefile  main.c  stat.c  stat_header.h
tests/: Makefile  Makefile.am  Makefile.in
tests/coreLogic/: Makefile  Makefile.am  Makefile.in  test.c  test.db  test.h
