#$(top_builddirs)
bin_PROGRAMS = pokerClient
pathgraf=../graf
LDADD = -lpthread
LDADD += -lncursesw
pokerClient_SOURCES = main.c
pokerClient_SOURCES += ../global.h
pokerClient_SOURCES += logic_menu.c logic_game.c logic.h net_header.h net_net.c
pokerClient_SOURCES += ../graf/graf.c ../graf/graf.h ../graf/graf_api.h ../graf/graf_list.c ../graf/graf_list.h
