bin_PROGRAMS = pokerServer testCoreLogic
pokerServer_SOURCES = main.c
pokerServer_SOURCES += ../global.h
pokerServer_SOURCES += gameServer/gameLogic.c gameServer/gameLogic.h
pokerServer_SOURCES += gameServer/win.c gameServer/win.h
testCoreLogic_SOURCES = gameServer/tests/test.c gameServer/tests/test.h
testCoreLogic_SOURCES += gameServer/gameLogic.c gameServer/gameLogic.h
testCoreLogic_SOURCES += gameServer/win.c gameServer/win.h
