bin_PROGRAMS = pokerServer
pokerServer_SOURCES = main.c
pokerServer_SOURCES += ../global.h
# pokerServer_SOURCES += gameServer/gameLogic.c gameServer/gameLogic.h
pokerServer_SOURCES += server_network.c server_network.h
pokerServer_SOURCES += events.c events.h logic.c logic.h
pokerServer_SOURCES += gameServer/gameLogic.c gameServer/gameLogic.h
pokerServer_SOURCES += gameServer/win.c gameServer/win.h
