SUBDIRS = .
TESTS = coreLogic
check_PROGRAMS = $(TESTS)
coreLogic_SOURCES = test.c test.h
coreLogic_SOURCES += $(top_builddir)/src/server/gameServer/gameLogic.c $(top_builddir)/src/server/gameServer/gameLogic.h
coreLogic_SOURCES += $(top_builddir)/src/server/gameServer/win.c $(top_builddir)/src/server/gameServer/win.h
